Fixed double click for jump links by implementing react-scroll

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -4,7 +4,6 @@ html {
   font: 112.5%/1.45em georgia, serif, sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
-  scroll-behavior: smooth;
 }
 body {
   margin: 0;
